Stream working localy
